--- a/src/version/overview/components/VersionSurvey.scss
+++ b/src/version/overview/components/VersionSurvey.scss
@@ -51,8 +51,8 @@
             padding: var(--tiklab-padding);
             background-color: #fff;
             border-radius: 4px;
-            width: 500px;
-            height: 420px;
+            flex: 1;
+            height: 440px;
 
             .version-info-title {
                 display: flex;
@@ -112,12 +112,11 @@
         }
 
         .burn-down-box {
-            width: calc(100% - 515px);
-            padding: 10px;
+            flex: 1;
+            padding: var(--tiklab-padding);
             background-color: #fff;
             border-radius: 4px;
-            height: 420px;
-            padding: var(--tiklab-padding);
+            height: 440px;
             .burn-down {
                 width: calc(100% - 20px);
                 height: calc(100% - 20px);
