--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -72,11 +72,12 @@
         .home-project {
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
             margin-top: 10px;
-            overflow: auto;
-            gap: 20px;
+            overflow: hidden;
+            gap: 10px;
             padding-bottom: 10px;
-
+            height: 104px;
             .project-item:hover {
                 border-radius: 4px 4px 0 0;
                 border-bottom: 2px solid var(--tiklab-blue);
@@ -85,8 +86,9 @@
 
             .project-item {
                 max-width: 240px;
+                min-width: 204px;
                 flex: 1;
-                padding: 15px;
+                padding: 12px;
                 box-sizing: content-box;
                 flex-shrink: 0;
                 border-radius: 4px;
@@ -94,18 +96,19 @@
                 background-color: var(--tiklab-gray-600);
                 box-sizing: border-box;
                 border-bottom: 2px solid var(--tiklab-gray-600);
-
+                
                 .item-title {
                     margin-bottom: 10px;
                     font-weight: var(--tiklab-font-weight-bold);
                     display: inline-flex;
                     align-items: center;
                     font-size: 16px;
-
+                    
                     .item-name {
                         text-overflow: ellipsis;
                         white-space: nowrap;
                         overflow: hidden;
+                        min-width: 140px;
                     }
 
                     .project-icon {
@@ -123,7 +126,7 @@
 
                 .item-work {
                     display: flex;
-                    gap: 20px;
+                    gap: 10px;
                 }
 
                 .process-work,
@@ -134,11 +137,15 @@
                     justify-content: space-between;
                     height: 30px;
                     line-height: 30px;
-
+                    gap: 5px;
                     .work-label {
                         text-overflow: ellipsis;
                         white-space: nowrap;
                         overflow: hidden;
+                        width: 60px;
+                    }
+                    .work-num {
+                        width: 25px;
                     }
                 }
             }
@@ -240,14 +247,17 @@
             align-items: center;
             margin-bottom: 10px;
             gap: 20px;
-
+            
             .work-left {
                 display: flex;
                 align-items: center;
                 gap: 5px;
                 flex: 1;
-
+                flex-shrink: 1;
+                min-width: 0;
                 .work-content {
+                    flex-shrink: 1;
+                    min-width: 0;
                     .content-name:hover {
                         cursor: pointer;
                         color: var(--tiklab-blue);
