--- a/src/project/overview/components/Survey.scss
+++ b/src/project/overview/components/Survey.scss
@@ -24,7 +24,7 @@
         margin-bottom: 15px;
         gap: 20px;
         .project-box {
-            padding: 15px;
+            padding: var(--tiklab-padding);
             background-color: #fff;
             border-radius: 4px;
             // width: 500px;
@@ -68,6 +68,7 @@
 
                 .project-work {
                     display: flex;
+                    justify-content: space-between;
                     gap: 20px;
                 }
 
@@ -77,7 +78,7 @@
         .burn-down-box {
             // width: calc(100% - 515px);
             flex: 1;
-            padding: 15px;
+            padding: var(--tiklab-padding);
             background-color: #fff;
             border-radius: 4px;
 
@@ -205,8 +206,12 @@
                 align-items: center;
                 gap: 5px;
                 flex: 1;
-
+                flex-shrink: 1;
+                min-width: 0;
                 .work-content {
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
                     .content-name:hover {
                         cursor: pointer;
                         color: var(--tiklab-blue);
