--- a/src/sprint/common/components/SprintChangeModal.scss
+++ b/src/sprint/common/components/SprintChangeModal.scss
@@ -58,7 +58,10 @@
         position: absolute;
         top: 0;
         z-index: 100;
-        width: 200px;
+        width: 300px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
         border-radius: 4px;
         background: #fff;
         box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
