--- a/src/work/components/WorkChild.scss
+++ b/src/work/components/WorkChild.scss
@@ -58,10 +58,9 @@
         background: #fff;
         border-radius: 4px;
         position: relative;
-        height: calc(100% - 100px);
         .ant-table {
             overflow: auto;
-            max-height: calc(100% - 100px);
+            // max-height: calc(100% - 100px);
             border-top: 1px solid #f0f0f0;
         }
     }
