--- a/src/work/components/WorkChildAdd.scss
+++ b/src/work/components/WorkChildAdd.scss
@@ -1,10 +1,9 @@
 .child-add {
     position: absolute;
-    height: 100%;
     width: 100%;
     z-index: 3;
     background: #fff;
-
+    height: calc(100vh - 240px);
     .child-add-model {
         position: absolute;
         z-index: 3;
@@ -12,7 +11,7 @@
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
         background: #fff;
         top: 40px;
-        height: calc(100% - 70px);
+        height: calc(100% - 50px);
     }
 
     .child-add-search {
