--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -78,6 +78,7 @@
             gap: 10px;
             padding-bottom: 10px;
             height: 104px;
+
             .project-item:hover {
                 border-radius: 4px 4px 0 0;
                 border-bottom: 2px solid var(--tiklab-blue);
@@ -96,14 +97,14 @@
                 background-color: var(--tiklab-gray-600);
                 box-sizing: border-box;
                 border-bottom: 2px solid var(--tiklab-gray-600);
-                
+
                 .item-title {
                     margin-bottom: 10px;
                     font-weight: var(--tiklab-font-weight-bold);
                     display: inline-flex;
                     align-items: center;
                     font-size: 16px;
-                    
+
                     .item-name {
                         text-overflow: ellipsis;
                         white-space: nowrap;
@@ -138,12 +139,14 @@
                     height: 30px;
                     line-height: 30px;
                     gap: 5px;
+
                     .work-label {
                         text-overflow: ellipsis;
                         white-space: nowrap;
                         overflow: hidden;
                         width: 60px;
                     }
+
                     .work-num {
                         width: 25px;
                     }
@@ -164,7 +167,7 @@
         border-radius: 4px;
         flex: 1;
 
-        &-title {
+        &-top {
             width: 100%;
             font-weight: var(--tiklab-font-weight-bold);
             display: flex;
@@ -186,7 +189,42 @@
 
         &-list {
             margin-top: 10px;
-            cursor: pointer;
+
+            .todo-item {
+                margin-bottom: 10px;
+                // .todo-user-icon {
+                //     border: #ff0000 1px solid;
+                // }
+            }
+            .todo-work-title:hover {
+                color: var(--tiklab-blue);
+                cursor: pointer;
+            }
+
+
+            .todo-item:nth-child(4n+1) {
+                .todo-user-icon {
+                    background-color: #cadbf3;
+                }
+            }
+
+            .todo-item:nth-child(4n+2){
+                .todo-user-icon {
+                    background-color: #deedd7;
+                }
+            }
+
+            .todo-item:nth-child(4n+3) {
+                .todo-user-icon {
+                    background-color: #ffebee;
+                }
+            }
+
+            .todo-item:nth-child(4n+4){
+                .todo-user-icon {
+                    background-color: #e8eaf6;
+                }
+            }
         }
     }
 
@@ -247,7 +285,7 @@
             align-items: center;
             margin-bottom: 10px;
             gap: 20px;
-            
+
             .work-left {
                 display: flex;
                 align-items: center;
@@ -255,9 +293,11 @@
                 flex: 1;
                 flex-shrink: 1;
                 min-width: 0;
+
                 .work-content {
                     flex-shrink: 1;
                     min-width: 0;
+
                     .content-name:hover {
                         cursor: pointer;
                         color: var(--tiklab-blue);
