--- a/src/projectSet/overview/components/ProjectSetSurvey.scss
+++ b/src/projectSet/overview/components/ProjectSetSurvey.scss
@@ -154,7 +154,7 @@
             }
         }
     }
-    .projectSet-pending-workitem {
+    .projectSet-todo {
            
         border-radius: 4px;
         background-color: #ffffff;
@@ -165,9 +165,40 @@
         margin-bottom: 15px;
         min-height: 300px;
         &-list {
-            .dynamic-item {
+            margin-top: 10px;
+            .todo-item {
+                margin-bottom: 10px;
+            }
+            .todo-work-title:hover {
+                color: var(--tiklab-blue);
                 cursor: pointer;
             }
+    
+    
+            .todo-item:nth-child(4n+1) {
+                .todo-user-icon {
+                    background-color: #cadbf3;
+                }
+            }
+    
+            .todo-item:nth-child(4n+2){
+                .todo-user-icon {
+                    background-color: #deedd7;
+                }
+            }
+    
+            .todo-item:nth-child(4n+3) {
+                .todo-user-icon {
+                    background-color: #ffebee;
+                }
+            }
+    
+            .todo-item:nth-child(4n+4){
+                .todo-user-icon {
+                    background-color: #e8eaf6;
+                }
+            }
+
         }
         .projectSet-pending-workitem-item {
             width: 100%;
