--- a/src/sprint/overview/components/SprintSurvey.scss
+++ b/src/sprint/overview/components/SprintSurvey.scss
@@ -110,11 +110,45 @@
         }
         
     }
-    .sprint-pending-workitem {
+    .sprint-todo {
+        background-color: #fff;
         padding: var(--tiklab-padding);
         margin-bottom: 15px;
-        background-color: #fff;
+        .sprint-todo-list {
+            margin-top: 15px;
+            .todo-item {
+                margin-bottom: 10px;
+                .todo-work-title:hover {
+                    color: var(--tiklab-blue);
+                    cursor: pointer;
+                }
+            }
+            .todo-item:nth-child(4n+1) {
+                .todo-user-icon {
+                    background-color: #cadbf3;
+                }
+            }
+
+            .todo-item:nth-child(4n+2){
+                .todo-user-icon {
+                    background-color: #deedd7;
+                }
+            }
+
+            .todo-item:nth-child(4n+3) {
+                .todo-user-icon {
+                    background-color: #ffebee;
+                }
+            }
+
+            .todo-item:nth-child(4n+4){
+                .todo-user-icon {
+                    background-color: #e8eaf6;
+                }
+            }
+        }
     }
+    
     .dynamic-box {
         padding: var(--tiklab-padding);
         background-color: #fff;
@@ -124,7 +158,36 @@
         }
 
         .dynamic-list {
-            padding-bottom: 20px;
+            margin-top: 15px;
+            .dynamic-item {
+                margin-bottom: 10px;
+                .dynamic-work-title:hover {
+                    color: var(--tiklab-blue);
+                }
+            }
+            .dynamic-item:nth-child(4n+1) {
+                .dynamic-user-icon {
+                    background-color: #cadbf3;
+                }
+            }
+
+            .dynamic-item:nth-child(4n+2){
+                .dynamic-user-icon {
+                    background-color: #deedd7;
+                }
+            }
+
+            .dynamic-item:nth-child(4n+3) {
+                .dynamic-user-icon {
+                    background-color: #ffebee;
+                }
+            }
+
+            .dynamic-item:nth-child(4n+4){
+                .dynamic-user-icon {
+                    background-color: #e8eaf6;
+                }
+            }
         }
     }
 }
