--- a/src/sprint/overview/components/SprintSurvey.scss
+++ b/src/sprint/overview/components/SprintSurvey.scss
@@ -3,8 +3,8 @@
     height: 0 !important;
 }
 .sprint-survey {
-    height: calc(100vh - 48px);
-    overflow: auto;
+    // height: calc(100vh - 48px);
+    // overflow: auto;
     padding: var(--thoughtware-padding);
     .ant-row {
         background: #f0f2f5;
@@ -110,84 +110,46 @@
         }
         
     }
-    .sprint-todo {
-        background-color: #fff;
-        padding: var(--thoughtware-padding);
-        margin-bottom: 15px;
-        .sprint-todo-list {
-            margin-top: 15px;
-            .todo-item {
-                margin-bottom: 10px;
-                .todo-work-title:hover {
-                    color: var(--thoughtware-blue);
-                    cursor: pointer;
-                }
-            }
-            .todo-item:nth-child(4n+1) {
-                .todo-user-icon {
-                    background-color: #cadbf3;
-                }
-            }
 
-            .todo-item:nth-child(4n+2){
-                .todo-user-icon {
-                    background-color: #deedd7;
-                }
-            }
+    // .dynamic-box {
+    //     padding: var(--thoughtware-padding);
+    //     background-color: #fff;
+    //     .dynamic-item {
+    //         margin-bottom: 10px;
+    //         cursor: pointer;
+    //     }
 
-            .todo-item:nth-child(4n+3) {
-                .todo-user-icon {
-                    background-color: #ffebee;
-                }
-            }
+    //     .dynamic-list {
+    //         margin-top: 15px;
+    //         .dynamic-item {
+    //             margin-bottom: 10px;
+    //             .dynamic-work-title:hover {
+    //                 color: var(--thoughtware-blue);
+    //             }
+    //         }
+    //         .dynamic-item:nth-child(4n+1) {
+    //             .dynamic-user-icon {
+    //                 background-color: #cadbf3;
+    //             }
+    //         }
 
-            .todo-item:nth-child(4n+4){
-                .todo-user-icon {
-                    background-color: #e8eaf6;
-                }
-            }
-        }
-    }
-    
-    .dynamic-box {
-        padding: var(--thoughtware-padding);
-        background-color: #fff;
-        .dynamic-item {
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
+    //         .dynamic-item:nth-child(4n+2){
+    //             .dynamic-user-icon {
+    //                 background-color: #deedd7;
+    //             }
+    //         }
 
-        .dynamic-list {
-            margin-top: 15px;
-            .dynamic-item {
-                margin-bottom: 10px;
-                .dynamic-work-title:hover {
-                    color: var(--thoughtware-blue);
-                }
-            }
-            .dynamic-item:nth-child(4n+1) {
-                .dynamic-user-icon {
-                    background-color: #cadbf3;
-                }
-            }
+    //         .dynamic-item:nth-child(4n+3) {
+    //             .dynamic-user-icon {
+    //                 background-color: #ffebee;
+    //             }
+    //         }
 
-            .dynamic-item:nth-child(4n+2){
-                .dynamic-user-icon {
-                    background-color: #deedd7;
-                }
-            }
-
-            .dynamic-item:nth-child(4n+3) {
-                .dynamic-user-icon {
-                    background-color: #ffebee;
-                }
-            }
-
-            .dynamic-item:nth-child(4n+4){
-                .dynamic-user-icon {
-                    background-color: #e8eaf6;
-                }
-            }
-        }
-    }
+    //         .dynamic-item:nth-child(4n+4){
+    //             .dynamic-user-icon {
+    //                 background-color: #e8eaf6;
+    //             }
+    //         }
+    //     }
+    // }
 }
