--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -79,7 +79,7 @@
         .detail-top {
             display: flex;
             justify-content: space-between;
-
+            gap: 23px;
             .work-item-title {
                 border-bottom: 1px solid rgb(223, 225, 230);
             }
@@ -104,6 +104,7 @@
         .detail-bottom {
             display: flex;
             align-items: flex-end;
+            gap: 5px;
             .ant-form {
                 flex: 1;
             }
@@ -121,7 +122,6 @@
                 height: 30px;
                 margin-bottom: 10px;
                 padding: 6px 0;
-                width: 30%;
             }
             .close {
                 transition: all 0.2s;
