--- a/src/home/common/components/DynamicList.scss
+++ b/src/home/common/components/DynamicList.scss
@@ -6,7 +6,7 @@
     background: #fff;
 
     .dynamic-list-top {
-        position: sticky;
+        // position: sticky;
         top: 0;
         z-index: 3;
         background: #fff;
