--- a/src/home/common/components/TodoPageList.scss
+++ b/src/home/common/components/TodoPageList.scss
@@ -42,8 +42,8 @@
     //         background-color: #e8eaf6;
     //     }
     // }
-    // .todo-pagination {
-    //     text-align: center;
-    //     margin-top: 10px;
-    // }
+    .todo-pagination {
+        text-align: center;
+        margin-top: 10px;
+    }
 }
