--- a/src/project/project/components/ProjectList.scss
+++ b/src/project/project/components/ProjectList.scss
@@ -42,7 +42,7 @@
                     text-overflow: ellipsis;
                     white-space: nowrap;
                     overflow: hidden;
-                    min-width: 140px;
+                    max-width: 140px;
                 }
 
                 .project-icon {
