--- a/src/project/setting/basicInfo/components/BasicInfo.scss
+++ b/src/project/setting/basicInfo/components/BasicInfo.scss
@@ -28,9 +28,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 15px;
+        color: #ff0000;
     }
-    .change-botton {
+    .change-button {
         cursor: pointer;
         text-align: center;
         height: 30px;
@@ -41,11 +41,15 @@
         width: 100px;
         font-size: 12px;
     }
-    .project-set-delete {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .delete-button {
+        background-color: #ff0000;
+        margin-top: 10px;
     }
+    // .project-set-delete {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: center;
+    // }
 }
 .project-info {
     border-bottom: 1px solid #d9d9d9;
