--- a/src/projectSet/setting/basicInfo/components/ProjectSetBasicInfo.scss
+++ b/src/projectSet/setting/basicInfo/components/ProjectSetBasicInfo.scss
@@ -24,22 +24,37 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 15px;
     }
-    .change-botton {
+    .projectSet-set-icon {
+        .projectSet-form-icon {
+            align-items: center;
+        }
+        .projectSet-form-icon-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+    .projectSet-delete-block {
+        color: #ff0000;
+    }
+    .change-button {
         text-align: center;
         height: 30px;
         line-height: 30px;
-        margin-bottom: 20px;
         background: var(--thoughtware-blue);
         color: #fff;
         border-radius: 4px;
         width: 100px;
         font-size: 12px;
+        cursor: pointer;
+    }
+    .delete-button {
+        background-color: #ff0000;
+        margin-top: 10px;
     }
 }
 .projectSet-info {
-    border-bottom: 1px solid #d9d9d9;
     padding-bottom: 15px;
     .ant-form-item {
         margin-bottom: 20px;
