--- a/src/version/setting/components/VersionBasicInfo.scss
+++ b/src/version/setting/components/VersionBasicInfo.scss
@@ -1,5 +1,3 @@
-
-
 .version-info-title {
     display: flex;
     align-items: center;
@@ -29,8 +27,9 @@
         justify-content: space-between;
         align-items: center;
         margin-bottom: 15px;
+        color: #ff0000;
     }
-    .change-botton {
+    .change-button {
         text-align: center;
         height: 30px;
         line-height: 30px;
@@ -40,10 +39,8 @@
         width: 100px;
         font-size: 12px;
     }
-    .version-set-delete {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .delete-button {
+        background: #ff0000;
     }
 }
 .version-info {
