--- a/src/home/insight/components/NewInsight.scss
+++ b/src/home/insight/components/NewInsight.scss
@@ -70,7 +70,7 @@
 
     .new-insight-content {
         margin: 0 5px;
-
+        width: 100%;
         .ant-empty {
             margin-top: 100px;
         }
