--- a/src/project/project/components/ProjectList.scss
+++ b/src/project/project/components/ProjectList.scss
@@ -149,7 +149,7 @@
         // padding: 15px;
         .ant-layout-sider {
             background-color: #fff;
-            height: 100%;
+            min-height: 100%;
             border-right: 2px solid var(--thoughtware-gray-200);
             .project-aside {
                 height: 100%;
@@ -202,7 +202,7 @@
             height: 100%;
             overflow: auto;
             .ant-col {
-                height: 100%;
+                min-height: 100%;
                 background-color: #fff;
                 padding: var(--thoughtware-padding);
             }
