--- a/src/projectSet/projectSet/components/ProjectSet.scss
+++ b/src/projectSet/projectSet/components/ProjectSet.scss
@@ -7,7 +7,7 @@
         align-items: center;
     }
     .projectSet-table-box {
-        margin-top: 0;
+        margin-top: 15px;
         .projectSet-action-icon {
             cursor: pointer;
         }
