--- a/src/sprint/common/components/SprintChangeModal.scss
+++ b/src/sprint/common/components/SprintChangeModal.scss
@@ -41,6 +41,7 @@
         .sprint-aside-icon {
             width: 15px;
             height: 15px;
+            cursor: pointer;
         }
     }
 
@@ -74,10 +75,32 @@
             border-bottom: 1px solid #F0F0F0;
         }
     }
-    .change-sprint-name {
+    .change-sprint-item {
+        padding: 0 20px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        .change-sprint-info {
+            line-height: 30px;
+            flex: 1;
+            .change-sprint-state {
+                font-size: 12px;
+                color: var(--thoughtware-gray-500);
+            }
+        }
+    }
+
+    .change-sprint-more {
+        padding: 0 20px;
         height: 40px;
         line-height: 40px;
-        padding-left: 20px;
+        cursor: pointer;
+        border-top: 1px solid #F0F0F0;
+        color: var(--thoughtware-blue);
+        font-size: 13px;
+    }
+    .change-sprint-more:hover {
+        text-decoration: underline;
     }
 
     .change-sprint-selectName {
