--- a/src/version/common/components/VersionChangeModal.scss
+++ b/src/version/common/components/VersionChangeModal.scss
@@ -30,6 +30,7 @@
         .version-aside-icon {
             width: 15px;
             height: 15px;
+            cursor: pointer;
         }
     }
 
@@ -58,7 +59,10 @@
         position: absolute;
         top: 0;
         z-index: 100;
-        width: 200px;
+        width: 300px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
         border-radius: 4px;
         background: #fff;
         box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
@@ -71,12 +75,31 @@
             border-bottom: 1px solid #F0F0F0;
         }
     }
-    .change-version-name {
+
+
+    .change-version-item {
+        padding: 0 20px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        .change-version-info {
+            line-height: 30px;
+            flex: 1;
+            .change-version-state {
+                font-size: 12px;
+                color: var(--thoughtware-gray-500);
+            }
+        }
+    }
+    .change-version-more {
+        padding: 0 20px;
         height: 40px;
         line-height: 40px;
-        padding-left: 20px;
+        cursor: pointer;
+        border-top: 1px solid #F0F0F0;
+        color: var(--thoughtware-blue);
+        font-size: 13px;
     }
-
     .change-version-selectName {
         background-color: var(--thoughtware-gray-400);
     }
