修改迭代，版本规划

--- a/src/sprint/plan/components/SprintPlan.scss
+++ b/src/sprint/plan/components/SprintPlan.scss
@@ -81,6 +81,7 @@
                     justify-content: center;
                     color: var(--thoughtware-blue);
                     cursor: pointer;
+                    padding-bottom: 10px;
                 }
             }
 
