--- a/src/version/plan/components/VersionPlan.scss
+++ b/src/version/plan/components/VersionPlan.scss
@@ -26,7 +26,7 @@
                 text-align: center;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
-                position: sticky;
+                // position: sticky;
                 top: 0;
                 background: #f7f7f7;
                 .version-plan-title {
@@ -81,6 +81,7 @@
                     justify-content: center;
                     color: var(--thoughtware-blue);
                     cursor: pointer;
+                    padding-bottom: 10px;
                 }
             }
 
