修改事项添加

--- a/src/work/components/WorkAddPage.scss
+++ b/src/work/components/WorkAddPage.scss
@@ -54,6 +54,7 @@
         .work-add-page-form {
             overflow: auto;
             padding: 0 15px;
+            min-height: calc(100% - 100px);
         }
 
         .work-add-form {
