--- a/src/projectSet/projectList/components/ProjectSetProjectList.scss
+++ b/src/projectSet/projectList/components/ProjectSetProjectList.scss
@@ -13,6 +13,7 @@
     }
 
     .projectSet-table-box {
+        margin-top: 15px;
         .project-name {
             display: flex;
             align-items: center;
