--- a/src/projectSet/common/components/ProjectSetChangeModal.scss
+++ b/src/projectSet/common/components/ProjectSetChangeModal.scss
@@ -57,10 +57,9 @@
     .change-projectSet-box {
         position: absolute;
         top: 0;
-        left: 80px;
         z-index: 100;
-        width: 200px;
-        border-radius: 4px;
+        width: 300px;
+        border-radius: 5px;
         background: #fff;
         box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
         .change-projectSet-head {
@@ -68,8 +67,42 @@
             line-height: 40px;
             font-weight: 500;
             font-size: 14px;
-            padding: 0 20px;
+            padding: 0 15px;
             border-bottom: 1px solid #F0F0F0;
+        }
+        .change-projectSet-item {
+            padding:0 15px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            border-radius: 5px;
+            margin-bottom: 5px;
+            .projectSet-item-info {
+                line-height: 30px;
+                flex: 1;
+                .projectSet-type {
+                    font-size: 12px;
+                    color: var(--thoughtware-gray-500);
+                }
+            }
+        }
+        .change-projectSet-item:hover {
+            background-color: var(--thoughtware-gray-300);
+        }
+        .change-projectSet-selectItem {
+            background-color: var(--thoughtware-gray-400);
+        }
+        .change-projectSet-more {
+            padding: 0 20px;
+            height: 40px;
+            line-height: 40px;
+            cursor: pointer;
+            border-top: 1px solid #F0F0F0;
+            color: var(--thoughtware-blue);
+            font-size: 13px;
+        }
+        .change-projectSet-more:hover {
+            text-decoration: underline;
         }
     }
     .change-projectSet-name {
