--- a/src/projectSet/overview/components/ProjectSetSurvey.scss
+++ b/src/projectSet/overview/components/ProjectSetSurvey.scss
@@ -1,8 +1,10 @@
 .projectSet-survey {
     height: calc(100vh - var(--thoughtware-head-height));
-    padding: var(--thoughtware-padding);;
+    padding: var(--thoughtware-padding);
+    ;
     overflow: auto;
     background-color: var(--thoughtware-gray-600);
+
     .more {
         color: var(--thoughtware-blue);
         margin-left: 10px;
@@ -10,6 +12,7 @@
         display: flex;
         align-items: center;
     }
+
     .box-title {
         display: flex;
         align-items: center;
@@ -20,142 +23,182 @@
         // line-height: 30px;
         margin-bottom: 10px;
     }
+
     .projectSet-survey-top {
         display: flex;
         justify-content: space-between;
         width: 100%;
         margin-bottom: 15px;
+
         .survey-top-left {
             flex: 1;
             height: 100px;
             border-radius: 4px;
             height: 220px;
-            // box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
             padding: var(--thoughtware-padding);
             background-color: #fff;
+            width: calc(50% - 10px);
+
             .projectSet-info {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 padding-bottom: 20px;
+
                 .svg-icon {
                     margin-right: 10px;
                 }
             }
+
             .projectSet-info-icon {
                 width: 20px;
                 height: 20px;
                 margin-right: 10px;
             }
+
             .projectSet-info-content {
                 flex: 1;
             }
+
             .projectSet-infobottom {
                 display: flex;
                 flex-wrap: wrap;
             }
+
             .projectSet-info-item {
                 width: 50%;
                 display: flex;
                 height: 40px;
                 line-height: 40px;
                 font-size: 13px;
+
                 .projectSet-info-title {
                     width: 100px;
                     color: #999;
                 }
             }
         }
+
         .projectSet-process-project {
             flex: 1;
             border-radius: 4px;
             margin-left: 20px;
-            // box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
             padding: var(--thoughtware-padding);
             background-color: #fff;
             height: 220px;
+            width: calc(50% - 10px);
+
             &-list {
                 margin-top: 10px;
             }
+
             .projectSet-process-project-item {
                 .projectSet-process-project-left {
                     display: flex;
                     align-items: center;
+                    min-width: 0;
+                    flex-shrink: 1;
+
+                    .projectSet-process-project-name {
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+
+                        .name {
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            overflow: hidden;
+                        }
+                        .name:hover {
+                            color: var(--thoughtware-blue);
+                            cursor: pointer;
+                        }
+                    }
                 }
+
                 .projectSet-process-project-process {
                     width: 80px;
+                    text-align: right;
                 }
+
                 width: 100%;
-                padding: 0 20px;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 margin-bottom: 20px;
                 cursor: pointer;
+
                 .projectSet-process-project-icon {
                     width: 30px;
                     height: 30px;
                     border-radius: 4px;
                     margin-right: 10px;
                 }
-                .name {
-                    color: var(--thoughtware-blue)
-                }
+
                 .projectSet-process-project-date {
                     color: #999;
                     font-size: 12px;
                 }
             }
         }
-        
+
     }
+
     .projectSet-survey-middle {
         display: flex;
         justify-content: space-between;
-        
-       
-        
-       
+
+
+
+
     }
+
     .dynamic-box {
         background-color: #fff;
         border-radius: 4px;
         flex: 1;
         // box-shadow: rgba(168, 176, 189, 0.25) 0px 4px 8px -2px, rgba(188, 194, 205, 0.31) 0px 0px 1px 0px;
-        padding: var(--thoughtware-padding);;
+        padding: var(--thoughtware-padding);
+        ;
         min-height: 300px;
+
         .dynamic-list {
             margin-top: 10px;
+
             .dynamic-item {
                 margin-bottom: 10px;
                 cursor: pointer;
             }
         }
+
         .dynamic-item {
             .dynamic-item-left {
                 display: flex;
                 align-items: center;
             }
+
             .dynamic-icon {
                 width: 30px;
                 height: 30px;
                 border-radius: 4px;
                 margin-right: 10px;
             }
+
             .dynamic-name {
                 .name {
                     color: var(--thoughtware-blue)
                 }
             }
-            
+
             .dynamic-date {
                 color: #999;
                 font-size: 12px;
             }
         }
     }
+
     .projectSet-todo {
-           
+
         border-radius: 4px;
         background-color: #ffffff;
         margin-top: 15px;
@@ -164,42 +207,46 @@
         padding: var(--thoughtware-padding);
         margin-bottom: 15px;
         min-height: 300px;
+
         &-list {
             margin-top: 10px;
+
             .todo-item {
                 margin-bottom: 10px;
             }
+
             .todo-work-title:hover {
                 color: var(--thoughtware-blue);
                 cursor: pointer;
             }
-    
-    
+
+
             .todo-item:nth-child(4n+1) {
                 .todo-user-icon {
                     background-color: #cadbf3;
                 }
             }
-    
-            .todo-item:nth-child(4n+2){
+
+            .todo-item:nth-child(4n+2) {
                 .todo-user-icon {
                     background-color: #deedd7;
                 }
             }
-    
+
             .todo-item:nth-child(4n+3) {
                 .todo-user-icon {
                     background-color: #ffebee;
                 }
             }
-    
-            .todo-item:nth-child(4n+4){
+
+            .todo-item:nth-child(4n+4) {
                 .todo-user-icon {
                     background-color: #e8eaf6;
                 }
             }
 
         }
+
         .projectSet-pending-workitem-item {
             width: 100%;
             padding: 0 20px;
@@ -208,20 +255,23 @@
             align-items: center;
             margin-bottom: 15px;
             cursor: pointer;
+
             .projectSet-pending-workitem-left {
                 display: flex;
                 align-items: center;
             }
+
             .projectSet-pending-workitem-process {
                 width: 80px;
             }
-            
+
             .projectSet-pending-workitem-icon {
                 width: 30px;
                 height: 30px;
                 border-radius: 4px;
                 margin-right: 10px;
             }
+
             // .name {
             //     color: var(--thoughtware-blue)
             // }
