--- a/src/work/components/WorkComment.scss
+++ b/src/work/components/WorkComment.scss
@@ -113,7 +113,7 @@
                 cursor: pointer;
             }
             span:hover {
-                color: var(--thoughtware-gray-400)
+                color: var(--thoughtware-blue)
             }
         }
         .edit-comment-show {
