--- a/src/project/wiki/components/WikiRepository.scss
+++ b/src/project/wiki/components/WikiRepository.scss
@@ -7,7 +7,10 @@
         cursor: pointer;
     }
     .repository-name {
-        color: var(--thoughtware-blue);
+       
         cursor: pointer;
+    }
+    .repository-name:hover {
+        color: var(--thoughtware-blue);
     }
 }
