--- a/src/projectSet/common/components/ProjectSetChangeModal.scss
+++ b/src/projectSet/common/components/ProjectSetChangeModal.scss
@@ -1,6 +1,27 @@
 .change-projectSet {
     position: relative;
-
+    .projectSet-icon {
+        width: 32px;
+        height: 32px;
+        border-radius: 5px;
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 5px;
+    }
+    .projectSet-color-1 {
+        background-color: #cadbf3;
+    }
+    .projectSet-color-2 {
+        background-color: #deedd7;
+    }
+    .projectSet-color-3 {
+        background-color: #ffebee;
+    }
+    .projectSet-color-4 {
+        background-color: #e8eaf6;
+    }
     .projectSet-change-title {
         display: flex;
         align-items: center;
@@ -8,6 +29,7 @@
         color: #000;
         font-weight: 600;
         cursor: pointer;
+       
         .projectSet-text {
             margin: 0 10px;
 
@@ -77,6 +99,28 @@
             align-items: center;
             border-radius: 5px;
             margin-bottom: 5px;
+            .projectSet-icon {
+                width: 32px;
+                height: 32px;
+                border-radius: 5px;
+                color: #fff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-right: 5px;
+            }
+            .projectSet-color-1 {
+                background-color: #cadbf3;
+            }
+            .projectSet-color-2 {
+                background-color: #deedd7;
+            }
+            .projectSet-color-3 {
+                background-color: #ffebee;
+            }
+            .projectSet-color-4 {
+                background-color: #e8eaf6;
+            }
             .projectSet-item-info {
                 line-height: 30px;
                 flex: 1;
@@ -85,6 +129,7 @@
                     color: var(--thoughtware-gray-500);
                 }
             }
+
         }
         .change-projectSet-item:hover {
             background-color: var(--thoughtware-gray-300);
