--- a/src/projectSet/projectSet/components/ProjectSet.scss
+++ b/src/projectSet/projectSet/components/ProjectSet.scss
@@ -21,31 +21,20 @@
                 align-items: center;
                 margin-right: 5px;
             }
-        }
-
-        .ant-table-row:nth-child(4n+1) {
-            .projectSet-table-icon {
+            .projectSet-color-1 {
                 background-color: #cadbf3;
             }
-        }
-        
-        .ant-table-row:nth-child(4n+2){
-            .projectSet-table-icon {
+            .projectSet-color-2 {
                 background-color: #deedd7;
             }
-        }
-        
-        .ant-table-row:nth-child(4n+3) {
-            .projectSet-table-icon {
+            .projectSet-color-3 {
                 background-color: #ffebee;
             }
-        }
-        
-        .ant-table-row:nth-child(4n+4){
-            .projectSet-table-icon {
+            .projectSet-color-4 {
                 background-color: #e8eaf6;
             }
         }
+
         .projectSet-action-icon {
             cursor: pointer;
         }
@@ -142,6 +131,18 @@
                             align-items: center;
                             margin-right: 5px;
                         }
+                        .projectSet-color-1 {
+                            background-color: #cadbf3;
+                        }
+                        .projectSet-color-2 {
+                            background-color: #deedd7;
+                        }
+                        .projectSet-color-3 {
+                            background-color: #ffebee;
+                        }
+                        .projectSet-color-4 {
+                            background-color: #e8eaf6;
+                        }
                         .item-name {
                             font-size: 16px;
                             text-overflow: ellipsis;
@@ -186,29 +187,7 @@
                         }
                     }
                 }
-                .projectSet-item:nth-child(4n+1) {
-                    .item-icon {
-                        background-color: #cadbf3;
-                    }
-                }
-                
-                .projectSet-item:nth-child(4n+2){
-                    .item-icon {
-                        background-color: #deedd7;
-                    }
-                }
-                
-                .projectSet-item:nth-child(4n+3) {
-                    .item-icon {
-                        background-color: #ffebee;
-                    }
-                }
-                
-                .projectSet-item:nth-child(4n+4){
-                    .item-icon {
-                        background-color: #e8eaf6;
-                    }
-                }
+               
                 .ant-empty {
                     width: 100%;
                 }
