--- a/src/work/components/WorkLog.scss
+++ b/src/work/components/WorkLog.scss
@@ -41,6 +41,9 @@
             .log-content {
                 line-height: 30px;
             }
+            .log-action {
+                display: flex;
+            }
         }
     }
 
