--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -38,6 +38,7 @@
                 line-height: 32px;
                 display: flex;
                 align-items: center;
+                cursor: pointer;
             }
 
             .tabs-dropdown {
