--- a/src/work/components/WorkTypeTab.scss
+++ b/src/work/components/WorkTypeTab.scss
@@ -21,6 +21,7 @@
             line-height: 42px;
             display: flex;
             align-items: center;
+            cursor: pointer;
         }
 
         .tabs-dropdown {
