--- a/src/workLog/components/LogViewTable.scss
+++ b/src/workLog/components/LogViewTable.scss
@@ -1,47 +1,25 @@
-.workItem-log {
-    padding: 20px;
-    height: calc(100vh - 49px);
-    background: #fff;
-    .worklog-content {
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: normal;
-        word-break: break-word;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        padding-right: 20px;
-        cursor: pointer;
-    }
-    .worklog-content:hover {
-        color: var(--thoughtware-blue);
-    }
-}
-
-
 .log-tab-filter {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
 
-    .log-tabs {
+    .log-view-tabs {
         display: flex;
         align-items: center;
         justify-content: flex-start;
         height: 50px;
         line-height: 50px;
 
-        .log-tab {
+        .log-view-tab {
             font-size: var(--thoughtware-font-13);
-            ;
             cursor: pointer;
             height: 50px;
             line-height: 50px;
             margin-right: 20px;
         }
 
-        .log-tab:last-child {
+        .log-view-tab:last-child {
             margin-right: 0;
         }
 
@@ -51,6 +29,10 @@
             border-bottom: 2px solid var(--thoughtware-blue);
         }
     }
-
+    .log-tab-filter-right {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
     
 }
