--- a/src/work/components/WorkDetail.scss
+++ b/src/work/components/WorkDetail.scss
@@ -81,6 +81,9 @@
                 cursor: pointer;
             }
         }
+        .work-detail-crumb-item:hover {
+            cursor: pointer;
+        }
 
     }
     .work-detail-close:hover {
