修改事项详情版本与迭代样式

--- a/src/work/components/WorkList.scss
+++ b/src/work/components/WorkList.scss
@@ -3,9 +3,9 @@
     height: calc(100vh - 49px);
     background: #fff;
     border-top: 1px solid #f7f7f7;
-    .ant-row {
-        overflow: auto;
-    }
+    // .ant-row {
+    //     overflow: auto;
+    // }
     .work-list-detail {
         width: 100%;
         height: 100%;
