--- a/src/sprint/overview/components/SprintSurvey.scss
+++ b/src/sprint/overview/components/SprintSurvey.scss
@@ -2,18 +2,22 @@
     width: 0 !important;
     height: 0 !important;
 }
+
 .sprint-survey {
     // height: calc(100vh - 48px);
     // overflow: auto;
     padding: var(--thoughtware-padding);
+
     .ant-row {
         background: #f0f2f5;
         height: 100%;
     }
+
     .ant-col {
         background: #fff;
         padding: 20px;
     }
+
     .sprint-title {
         width: 100%;
         height: 30px;
@@ -23,9 +27,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .more:hover{
-            text-decoration:underline;
+
+        .more:hover {
+            text-decoration: underline;
         }
+
         .more {
             color: var(--thoughtware-blue);
             margin-left: 10px;
@@ -34,19 +40,21 @@
             align-items: center;
         }
     }
-    
+
     .sprint-survey-top {
         display: flex;
         justify-content: space-between;
         align-items: center;
         gap: 20px;
         margin-bottom: 15px;
+
         .sprint-info-box {
             padding: var(--thoughtware-padding);
             background-color: #fff;
             border-radius: 4px;
             flex: 1;
             height: 440px;
+
             .sprint-info-title {
                 display: flex;
                 align-items: center;
@@ -54,34 +62,39 @@
                 font-weight: var(--thoughtware-font-weight-bold);
                 height: 40px;
                 line-height: 40px;
-                margin-bottom: 10px;
+
                 &-icon {
                     width: 30px;
                     height: 30px;
                 }
             }
-    
+
             .sprint-container {
                 .thoughtware-profile .ant-avatar {
                     width: 24px !important;
                     height: 24px !important;
                 }
-    
+
                 .sprint-item {
                     display: flex;
                     align-items: center;
                     gap: 10px;
                     margin-bottom: 10px;
                     cursor: pointer;
+
                     .item-content {
-                        .item-top, .item-bottom {
+
+                        .item-top,
+                        .item-bottom {
                             height: 30px;
                             line-height: 30px;
                         }
+
                         .item-bottom {
                             color: var(--thoughtware-gray-500);
                             font-size: 12px;
                         }
+
                         .item-progress {
                             width: 300px;
                             display: flex;
@@ -89,26 +102,53 @@
                         }
                     }
                 }
-    
+
                 .sprint-work {
                     display: flex;
                     gap: 20px;
                 }
-    
+
             }
         }
+
+        .sprint-info-top {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
+
+            .sprint-state-start-button {
+                font-size: 12px;
+                background: var(--thoughtware-blue);
+                padding: 5px 10px;
+                border-radius: 5px;
+                color: #fff;
+                cursor: pointer;
+            }
+
+            .sprint-state-disable-button {
+                font-size: 12px;
+                padding: 5px 10px;
+                border-radius: 5px;
+                background-color: var(--thoughtware-gray-700);
+                color: #999;
+                cursor: no-drop;
+            }
+        }
+
         .burn-down-box {
             flex: 1;
             padding: var(--thoughtware-padding);
             background-color: #fff;
             border-radius: 4px;
             height: 440px;
+
             .burn-down {
                 width: calc(100% - 20px);
                 height: calc(100% - 20px);
             }
         }
-        
+
     }
 
     // .dynamic-box {
