--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -199,6 +199,9 @@
             .ant-upload-select-text {
                 margin-bottom: 10px;
             }
+            .ant-checkbox-group {
+                padding-left: 11px;
+            }
 
             .work-detail-upload {
                 height: 80px;
