--- a/src/workLog/components/Log.scss
+++ b/src/workLog/components/Log.scss
@@ -6,9 +6,9 @@
         display: flex;
         gap: 20px;
         position: sticky;
-        padding: 20px 0 15px 0;
+        // padding: 20px 0 15px 0;
         flex: 1;
-        padding: 0 20px;
+        // padding: 0 20px;
 
         .log-tab-tabpane {
             cursor: pointer;
