优化甘特图

--- a/src/project/lineMap/component/Epic.scss
+++ b/src/project/lineMap/component/Epic.scss
@@ -66,7 +66,7 @@
         }
         .epic-text {
             cursor: pointer;
-            color: var(--thoughtware-blue);
+            // color: var(--thoughtware-blue);
             line-height: 25px;
             text-overflow: ellipsis;
             white-space: nowrap;
