--- a/src/work/components/WorkTableHead.scss
+++ b/src/work/components/WorkTableHead.scss
@@ -12,6 +12,39 @@
         align-items: center;
         justify-content: space-between;
         gap: 10px;
+        .work-gantt-view {
+            display: flex;
+            // border: 1px solid #f0f0f0;
+            align-items: center;
+            border-radius: 4px;
+            .work-gantt-view-item {
+                padding: 0 15px;
+                height: 32px;
+                line-height: 32px;
+                cursor: pointer;
+            }
+            .work-gantt-view-select {
+                color: #fff;
+                background-color: var(--thoughtware-blue);
+                border: 1px solid var(--thoughtware-blue);
+            }
+            .work-gantt-view-week {
+                border: 1px solid #f0f0f0;
+                border-right: 0;
+                border-top-left-radius: 4px;
+                border-bottom-left-radius: 4px;
+            }
+
+            .work-gantt-view-month {
+                border: 1px solid #f0f0f0;
+                border-left: 0;
+
+                
+
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
+            }
+        }
     }
     
 }
