修改事项筛选的bug

--- a/src/setting/workSeting/components/WorkPriority.scss
+++ b/src/setting/workSeting/components/WorkPriority.scss
@@ -17,5 +17,12 @@
     }
 }
 .work-priority {
-    padding: var(--thoughtware-padding);;
+    padding: var(--thoughtware-padding);
+    .work-priority-name {
+        display: flex;
+        align-items: center;
+        .work-type-icon {
+            margin-right: 10px;
+        }
+    }
 }
