--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -82,6 +82,11 @@ $form-input-color: #e3e8f07d;
     height: 40px;
 }
 
+.img-25 {
+    width: 25px;
+    height: 25px;
+}
+
 .icon-32 {
     width: 32px;
     height: 32px;
