--- a/src/work/components/gantt.scss
+++ b/src/work/components/gantt.scss
@@ -236,7 +236,7 @@
 .scroll-row {
     display: flex;
     justify-content: flex-end;
-    margin-top: 20px;
+    // margin-top: 20px;
     padding: 0 10px;
     .scroll-box {
         width: calc(100% - 450px);
