--- a/src/home/insight/components/ProjectSetWorkItem.scss
+++ b/src/home/insight/components/ProjectSetWorkItem.scss
@@ -22,6 +22,6 @@
     }
     .project-workitem-content {
         width: 100%;
-        height: 400px;
+        height: calc(100% - 74px);
     }
 }
